--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
-        <reactor-bom.version>Dysprosium-SR12</reactor-bom.version>
-        <rsocket.version>1.0.2</rsocket.version>
-        <netty.version>4.1.53.Final</netty.version>
+        <spring-boot.version>2.4.1</spring-boot.version>
+        <rsocket.version>1.1.0</rsocket.version>
+        <netty.version>4.1.57.Final</netty.version>
     </properties>
 
     <scm>
@@ -116,13 +115,6 @@
                 <version>${netty.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>io.projectreactor</groupId>
-                <artifactId>reactor-bom</artifactId>
-                <version>${reactor-bom.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>io.rsocket</groupId>
